feat: add some file
Signed-off-by: Zxilly <zxilly@outlook.com>

--- a/C_C++/CMakeLists.txt
+++ b/C_C++/CMakeLists.txt
@@ -138,3 +138,30 @@ add_executable(a test/a.cpp)
 add_executable(JGSU_NOIP17S4 contest/JGSU_OJ/JGSU_NOIP17S4.cpp)
 add_executable(temp3 temp/temp3.cpp)
 add_executable(temp4 temp/temp4.cpp)
+add_executable(817_A "contest/Codeforces/#817/817_A.cpp")
+add_executable(test test/test.cpp)
+add_executable(817_B "contest/Codeforces/#817/817_B.cpp")
+add_executable(817_C "contest/Codeforces/#817/817_C.cpp")
+add_executable(817_D "contest/Codeforces/#817/817_D.cpp")
+add_executable(818A contest/Codeforces/818/818A.cpp)
+add_executable(818B contest/Codeforces/818/818B.cpp)
+add_executable(818C contest/Codeforces/818/818C.cpp)
+add_executable(I contest/ICPC/Sim22.9.3/I.cpp)
+add_executable(F contest/ICPC/Sim22.9.3/F.cpp)
+add_executable(H contest/ICPC/Sim22.9.3/H.cpp)
+add_executable(L contest/ICPC/Sim22.9.3/L.cpp)
+add_executable(L2 contest/ICPC/Sim22.9.3/L2.cpp)
+add_executable(arc147_A contest/AtCoder/arc147/arc147_A.cpp)
+add_executable(819A contest/Codeforces/819/819A.cpp)
+add_executable(819B contest/Codeforces/819/819B.cpp)
+add_executable(819B2 contest/Codeforces/819/819B2.cpp)
+add_executable(E135A contest/Codeforces/E135/E135A.cpp)
+add_executable(E135B contest/Codeforces/E135/E135B.cpp)
+add_executable(E135C contest/Codeforces/E135/E135C.cpp)
+add_executable(E135D contest/Codeforces/E135/E135D.cpp)
+add_executable(820A contest/Codeforces/820/820A.cpp)
+add_executable(820B contest/Codeforces/820/820B.cpp)
+add_executable(820C contest/Codeforces/820/820C.cpp)
+add_executable(820D contest/Codeforces/820/820D.cpp)
+add_executable(820E contest/Codeforces/820/820E.cpp)
+add_executable(JGSU_T1043 contest/JGSU_OJ/JGSU_T1043.cpp)
